--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 
 .container {
  width: 100%;
- height: 150vh;
+ height: 160vh;
  position: relative;
  overflow: hidden;
 }
@@ -444,7 +444,7 @@ footer {
   width: 100%;
   height: 120vh;
   position: relative;
-  background-color: red;
+  background-color: blue;
  }
  
  
