--- a/style.css
+++ b/style.css
@@ -444,7 +444,7 @@ footer {
   width: 100%;
   height: 120vh;
   position: relative;
-  background-color: blue;
+  background-color: yellow;
  }
  
  
