--- a/style.css
+++ b/style.css
@@ -12,6 +12,15 @@ body {
     "YOPQ" 300;
 }
 
+button {
+  font-family: "Kumbh Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings:
+    "YOPQ" 300;
+    font-weight: 700;
+}
+
 .container {
  width: 100%;
  height: 160vh;
@@ -442,11 +451,54 @@ footer {
 @media (min-width:380px) and (max-width:600px) {
 .container {
   width: 100%;
-  height: 120vh;
+  height: 130vh;
   position: relative;
-  background-color: goldenrod;
+  background-color: white;
  }
  
+ .side {
+  background-color: white;
+  top: 0px;
+  height: 100vh;
+  position: fixed;
+  z-index: 1200;
+  width: 65%;
+  display: none;
+ }
+
+ .showUp {
+  animation: show 1s ease-in forwards;
+  display: block;
+ }
+
+ .close-nav {
+  margin-top: 40px;
+  
+ }
+
+ .exit {
+  animation: close 1s ease-in forwards;
+ }
+
+ @keyframes close {
+  from {transform: translateX(0px);}
+  to {transform: translateX(-300px);}
+ }
+
+ .nav-list2 {
+  height: 25%;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  justify-content: space-around;
+  margin-top: 30px;
+
+ }
+
+ @keyframes show {
+   from {transform: translateX(-200px);}
+   to {transform: translateX(0px);}
+ }
  
  .left-nav {
   width: 45%;
